# sqll

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: statement_benches.rs
examples/: axum.rs  persons.rs
sqll-macros/: Cargo.toml  README.md
sqll-macros/src/: from_row.rs  implement.rs  lib.rs
sqll-sys/: Cargo.toml  README.md  build.rs  sqlite3-version  sqlite3-version-bundled  versions
sqll-sys/src/: base.rs  lib.rs
src/: bind.rs  bind_value.rs  bindable.rs  borrowable.rs  bytes.rs  check.rs  code.rs  connection.rs  error.rs  ffi.rs  fixed_blob.rs  fixed_bytes.rs  fixed_string.rs  fixed_text.rs  from_column.rs  from_row.rs  from_unsized_column.rs  gettable.rs  lib.rs  not_null.rs  open_options.rs  owned.rs  readable.rs  row.rs  sink.rs  statement.rs  tests.rs  text.rs  ty.rs  utils.rs  value.rs  value_type.rs  version.rs  writable.rs
src/bind_value/: alloc.rs  mod.rs
src/bytes/: tests.rs
src/from_column/: alloc.rs  mod.rs
src/tests/: basics.rs  busy.rs  data.rs  mod.rs
src/ty/: not_null.rs  ty.rs
tests/: tests.rs
tools/: Cargo.toml
tools/src/: main.rs
