[package]
name = "sqll"
version = "0.1.5"
authors = [
    "John-John Tedro <udoprog@tedro.se>"
]
edition = "2024"
rust-version = "1.91"
description = "Usable low-level interface to SQLite that doesn't get in your way"
documentation = "https://docs.rs/sqll"
readme = "README.md"
homepage = "https://github.com/udoprog/sqll"
repository = "https://github.com/udoprog/sqll"
license = "MIT OR Apache-2.0"
keywords = ["database"]
categories = ["api-bindings", "database"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
bundled = ["sqll-sys/bundled"]

[dependencies]
sqll-sys = { version = "0.1.5", path = "sqll-sys", default-features = false }

[dev-dependencies]
anyhow = "1.0.100"
criterion = "0.8.0"
tempfile = "3.24.0"
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }

[[bench]]
name = "statement_benches"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["sqll-sys", "tools"]
exclude = ["tools"]
