[package]
name = "sqll"
version = "0.2.7"
authors = [
    "John-John Tedro <udoprog@tedro.se>"
]
edition = "2024"
rust-version = "1.91"
description = "Efficient interface to SQLite that doesn't get in your way"
documentation = "https://docs.rs/sqll"
readme = "README.md"
homepage = "https://github.com/udoprog/sqll"
repository = "https://github.com/udoprog/sqll"
license = "MIT OR Apache-2.0"
keywords = ["api-bindings", "database", "ffi", "sqlite"]
categories = ["api-bindings", "database"]

[features]
default = ["std", "threadsafe"]
std = ["alloc"]
alloc = []
bundled = ["sqll-sys/bundled"]
threadsafe = ["sqll-sys/threadsafe"]

[dependencies]
sqll-sys = { version = "0.2.6", path = "sqll-sys", default-features = false }

[dev-dependencies]
anyhow = "1.0.100"
criterion = "0.8.0"
tempfile = "3.24.0"
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }

[[bench]]
name = "statement_benches"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["sqll-sys", "tools"]
