[package]
name = "sqll-sys"
version = "0.1.3+sqlite-3.51.1"
authors = [
    "John-John Tedro <udoprog@tedro.se>",
]
edition = "2024"
rust-version = "1.91"
description = "The package provides bindings to SQLite."
documentation = "https://docs.rs/sqll"
readme = "README.md"
homepage = "https://github.com/udoprog/sqll"
repository = "https://github.com/udoprog/sqll"
license = "MIT OR Apache-2.0"
keywords = ["api-bindings", "database", "sqlite"]
categories = ["database", "external-ffi-bindings"]

include = [
    "Cargo.toml",
    "build.rs",
    "source/sqlite3.c",
    "src/**",
    "README.md",
    "sqlite3-version",
]

links = "sqlite3"

[features]
default = ["bundled"]
bundled = []

[build-dependencies]
cc = "1.2.51"
pkg-config = "0.3.32"
semver = "1.0.27"
vcpkg = "0.2.15"
