[package]
name = "sqll-sys"
version = "0.3.1+sqlite-3.51.1"
authors = [
    "John-John Tedro <udoprog@tedro.se>",
]
edition = "2024"
rust-version = "1.91"
description = "Efficient interface interface to SQLite that doesn't get in your way"
documentation = "https://docs.rs/sqll"
readme = "README.md"
homepage = "https://github.com/udoprog/sqll"
repository = "https://github.com/udoprog/sqll"
license = "MIT OR Apache-2.0"
keywords = ["api-bindings", "database", "ffi", "sqlite"]
categories = ["database", "external-ffi-bindings"]

include = [
    "Cargo.toml",
    "build.rs",
    "source/sqlite3.c",
    "src/**",
    "README.md",
]

links = "sqlite3"

[features]
default = ["threadsafe", "bundled", "strict"]
bundled = []
threadsafe = []
strict = []

[build-dependencies]
cc = "1.2.51"
semver = "1.0.27"
pkg-config = "0.3.32"
vcpkg = "0.2.15"
