[package]
name = "tools"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
bindgen = "0.72.1"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
relative-path = "2.0.1"
reqwest = { version = "0.13.1", features = ["json"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
zip = "7.0.0"
